# docker-django-aws

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  task-definition.json
demo/: settings.py  urls.py
newss/: views.py
scripts/: entrypoint.sh
