[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Faisal Fida <FA20-BCS-004@cuiwah.edu.pk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
django-cors-headers = "^4.3.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
